<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">





    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@mipmap/background"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:filterTouchesWhenObscured="true">


        <RelativeLayout
            android:id="@+id/register_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="205dp"
            android:layout_marginRight="20dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"

                    android:text="注册"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/usename_layout_re"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/username_re"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/hint_username"
                    android:maxLength="20"
                    android:textSize="13dp"
                    android:paddingLeft="55dp"
                    android:paddingRight="60dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left|center_horizontal"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:src="@mipmap/usernamebtn"
                    android:visibility="visible" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/usecode_layout_re"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usename_layout_re"
                android:layout_marginTop="1dp"
                android:gravity="center">

                <EditText
                    android:id="@+id/password_re"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textSize="13dp"
                    android:paddingLeft="55dp"
                    android:paddingRight="60dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:src="@mipmap/passwordbtn" />


            </FrameLayout>

            <FrameLayout
                android:id="@+id/re_usecode_layout_re"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/usecode_layout_re"
                android:layout_marginTop="1dp"
                android:gravity="center"

                >

                <EditText
                    android:id="@+id/re_password_re"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:textSize="13dp"
                    android:paddingLeft="55dp"
                    android:paddingRight="60dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:src="@mipmap/passwordbtn" />

            </FrameLayout>

            <ImageButton
                android:id="@+id/registerBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/re_usecode_layout_re"
                android:layout_marginTop="20dp"
                android:background="@mipmap/registerbtn"
                android:gravity="center"


                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/forget_re"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="忘记密码"
                    android:textColor="#E29B3A"
                    android:textSize="13dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="285dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_re_"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="已有账户？去登录>>"
                    android:textSize="13dp" />
            </LinearLayout>


        </RelativeLayout>
    </RelativeLayout>




</android.support.constraint.ConstraintLayout>